--- a/enc_temp_folder/31f994b653caa201a65f623156fc1bb/Index.html
+++ b/enc_temp_folder/31f994b653caa201a65f623156fc1bb/Index.html
@@ -36,8 +36,8 @@
 
 
         function printTicTacToeGrid() {
-            const gridSize = 3; 
-            const cellSize = 300; 
+            const gridSize = 30; // 10 times bigger (3 * 10)
+            const cellSize = 30; // Set your desired cell size in pixels
             const gridContainer = document.getElementById('ticTacToeGrid');
 
             const table = document.createElement('table');
