--- a/Serveur/Index.html
+++ b/Serveur/Index.html
@@ -1,48 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artistic Direction isn't my strong side </title>
-    <style>
-        body 
-        {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
 
-        h1 
-        {
-            color: #333;
-        }
-    </style>
-</head>
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Modified HTML Page</title>
+        </head>
+        <body>
+            <header>
+                <h1>This is a Modified HTML Page</h1>
+            </header>
 
-<body>
+            <section>
+                <p>This is a modified paragraph of text.</p>
 
-    <header>
-        <h1>TIC TAC TOE</h1>
-    </header>
+                <ul>
+                    <li>10</li>
+                    <li>15</li>
+                    <li>5</li>
+                </ul>
 
-    <script>
-        function displayMessage() {
-            const urlParams = new URLSearchParams(window.location.search);
+                <p>Feel free to modify and customize this page further!</p>
+            </section>
 
-            if (urlParams.has('message')) {
-                const message = urlParams.get('message');
-
-                document.body.innerHTML += `<p>Received Message: ${message}</p>`;
-            }
-        }
-
-        // Call the function when the page loads
-        window.onload = displayMessage;
-    </script>
-
-
-    <footer>
-        <p>Projet Reseau</p>
-    </footer>
-
-</body>
-</html>
+            <footer>
+                <p>&copy; 2023 Modified HTML Page. All rights reserved.</p>
+            </footer>
+        </body>
+        </html>
+    
