--- a/Serveur/Index.html
+++ b/Serveur/Index.html
@@ -14,16 +14,14 @@
             <section>
                 <p>This is a modified paragraph of text.</p>
 
-                <ul>
-                    <li>10</li>
-                    <li>15</li>
-                    <li>5</li>
-                </ul>
-
                 <p>Feel free to modify and customize this page further!</p>
-            </section>
-
-            <footer>
+            </section><li><button onclick="window.open('blank.html', '_blank');">Button 1</button></li>
+<li><button onclick="window.open('blank.html', '_blank');">Button 2</button></li>
+<li><button onclick="window.open('blank.html', '_blank');">Button 3</button></li>
+<li><button onclick="window.open('blank.html', '_blank');">Button 4</button></li>
+<li><button onclick="window.open('blank.html', '_blank');">Button 5</button></li>
+<li><button onclick="window.open('blank.html', '_blank');">Button 6</button></li>
+<footer>
                 <p>&copy; 2023 Modified HTML Page. All rights reserved.</p>
             </footer>
         </body>
