--- a/Serveur/Index.html
+++ b/Serveur/Index.html
@@ -15,12 +15,12 @@
                 <p>This is a modified paragraph of text.</p>
 
                 <p>Feel free to modify and customize this page further!</p>
-            </section><li><button onclick="window.open('blank.html', '_blank');">Button 1</button></li>
-<li><button onclick="window.open('blank.html', '_blank');">Button 2</button></li>
-<li><button onclick="window.open('blank.html', '_blank');">Button 3</button></li>
-<li><button onclick="window.open('blank.html', '_blank');">Button 4</button></li>
-<li><button onclick="window.open('blank.html', '_blank');">Button 5</button></li>
-<li><button onclick="window.open('blank.html', '_blank');">Button 6</button></li>
+            </section><li><button onclick="window.open('blank1.html', '_blank');">Button 1</button></li>
+<li><button onclick="window.open('blank2.html', '_blank');">Button 2</button></li>
+<li><button onclick="window.open('blank3.html', '_blank');">Button 3</button></li>
+<li><button onclick="window.open('blank4.html', '_blank');">Button 4</button></li>
+<li><button onclick="window.open('blank5.html', '_blank');">Button 5</button></li>
+<li><button onclick="window.open('blank6.html', '_blank');">Button 6</button></li>
 <footer>
                 <p>&copy; 2023 Modified HTML Page. All rights reserved.</p>
             </footer>
