--- a/Serveur/Index.html
+++ b/Serveur/Index.html
@@ -1,29 +1,101 @@
 
-        <!DOCTYPE html>
-        <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Modified HTML Page</title>
-        </head>
-        <body>
-            <header>
-                <h1>This is a Modified HTML Page</h1>
-            </header>
+     <!DOCTYPE html>
+     <html lang="en">
+     <head>
+         <meta charset="UTF-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <title>Modified HTML Page</title>
+         <style>
+             body {
+                 display: flex;
+                 align-items: center;
+                 justify-content: center;
+                 height: 100vh;
+                 margin: 0;
+                 text-align: center;
+             }
 
-            <section>
-                <p>This is a modified paragraph of text.</p>
+             #content-container {
+                 display: flex;
+                 flex-direction: column;
+                 align-items: center;
+             }
 
-                <p>Feel free to modify and customize this page further!</p>
-            </section><li><button onclick="window.open('blank1.html', '_blank');">Button 1</button></li>
-<li><button onclick="window.open('blank2.html', '_blank');">Button 2</button></li>
-<li><button onclick="window.open('blank3.html', '_blank');">Button 3</button></li>
-<li><button onclick="window.open('blank4.html', '_blank');">Button 4</button></li>
-<li><button onclick="window.open('blank5.html', '_blank');">Button 5</button></li>
-<li><button onclick="window.open('blank6.html', '_blank');">Button 6</button></li>
-<footer>
-                <p>&copy; 2023 Modified HTML Page. All rights reserved.</p>
-            </footer>
-        </body>
-        </html>
-    
+             #grid-container {
+                 display: grid;
+                 grid-template-columns: repeat(3, 100px);
+                 grid-gap: 5px;
+                 margin-top: 10px;
+             }
+
+             .cell {
+                 width: 100px;
+                 height: 100px;
+                 border: 1px solid #ccc;
+                 display: flex;
+                 align-items: center;
+                 justify-content: center;
+                 font-size: 24px;
+                 cursor: pointer;
+             }
+         </style>
+     </head>
+     <body>
+         <div id="content-container">
+             <header>
+                 <h1>Ha yes, a Tic Tac Toe game</h1>
+             </header>
+
+             <section>
+               
+                 <p>Hope we end this project ASAP</p>
+             </section><li><button onclick="window.open('tictactoe.html?gameId=game0', '_blank');">Game number 0</button></li>
+<li><button onclick="window.open('tictactoe.html?gameId=game1', '_blank');">Game number 1</button></li>
+<li><button onclick="window.open('tictactoe.html?gameId=game2', '_blank');">Game number 2</button></li>
+<li><button onclick="window.open('tictactoe.html?gameId=game3', '_blank');">Game number 3</button></li>
+<li><button onclick="window.open('tictactoe.html?gameId=game4', '_blank');">Game number 4</button></li>
+<li><button onclick="window.open('tictactoe.html?gameId=game5', '_blank');">Game number 5</button></li>
+<li><button onclick="window.open('tictactoe.html?gameId=game6', '_blank');">Game number 6</button></li>
+<div id="grid-container"></div>
+
+             <footer>
+                 <p>Help me, this page has a trash aesthetic</p>
+             </footer>
+         </div>
+
+         <script>
+             // Function to handle cell clicks
+             function onCellClick(row, col) {
+                 console.log('Clicked on cell:', row, col);
+                 // Add your logic here for handling cell clicks
+             }
+
+             // Function to create the Tic-Tac-Toe grid
+             function createGrid() {
+                 var gridContainer = document.getElementById('grid-container');
+
+                 for (var i = 0; i < 3; i++) {
+                     for (var j = 0; j < 3; j++) {
+                         var cell = document.createElement('div');
+                         cell.className = 'cell';
+                         cell.dataset.row = i;
+                         cell.dataset.col = j;
+
+                         // Add a click event listener to each cell
+                         cell.addEventListener('click', function (event) {
+                             var clickedRow = event.target.dataset.row;
+                             var clickedCol = event.target.dataset.col;
+                             onCellClick(clickedRow, clickedCol);
+                         });
+
+                         gridContainer.appendChild(cell);
+                     }
+                 }
+             }
+
+             // Create the grid when the page loads
+             document.addEventListener('DOMContentLoaded', createGrid);
+         </script>
+
+     </body>
+     </html>
