--- a/Serveur/Index.html
+++ b/Serveur/Index.html
@@ -80,7 +80,7 @@
                          cell.className = 'cell';
                          cell.dataset.row = i;
                          cell.dataset.col = j;
-                         if(cell.dataset.row == 1)
+                         if(cell.dataset.row == 1  && cell.dataset.col == 1)
                          {cell.textContent = 'X'; }
                          
 
